--- a/index.html
+++ b/index.html
@@ -75,6 +75,14 @@
             <button>18+</button>
         </div>
 
+        <div class="text">
+            <span id="text"><a id="gold">Займы</a> еще никогда не были <a id="gold">такими</a> легкими!</span>
+        </div>
+
+        <div class="how">
+            <h1>Как это работает?</h1>
+        </div>
+
         <footer></footer>
     </div>
 
