--- a/index.html
+++ b/index.html
@@ -81,6 +81,18 @@
 
         <div class="how">
             <h1>Как это работает?</h1>
+            <div class="step">
+                <span class="stepnumber">1 шаг - Подайте заявку</span><br>
+                <span class="stepdesc">Мы сделали процесс создания заявки максимально простым. Займет не более 7 минут.</span>
+            </div>
+            <div class="step">
+                <span class="stepnumber">2 шаг - Подождите</span><br>
+                <span class="stepdesc">На этом этапе мы проводим тщательную оценку заёмщика, поэтому нам нужно время - 2 минуты</span>
+            </div>
+            <div class="step">
+                <span class="stepnumber">3 шаг - Получите деньги</span><br>
+                <span class="stepdesc">Еще одна минутка - и вуаля! Получите деньги любым удобным способом.</span>
+            </div>
         </div>
 
         <footer></footer>
