--- a/index.html
+++ b/index.html
@@ -95,6 +95,8 @@
             </div>
         </div>
 
+        <button id="goup">Получить деньги</button>
+
         <footer></footer>
     </div>
 
