--- a/send.html
+++ b/send.html
@@ -37,7 +37,18 @@
 
             <h1>Регистрация</h1>
             <span class="desc">Введите действительный адрес электронной почты. Позже вы сможете подтвердить его.</span>
-            <input type="email" placeholder="example@honeyzaim.com" class="message">
+
+            <div class="messsage-box">
+                <input type="email" placeholder="example@honeyzaim.com" class="message" minlength="11" maxlength="34">
+                <span class="pre">Электронная почта</span>
+            </div>
+
+            <div class="messsage-box">
+                <input type="password" placeholder="Введите пароль" class="message" minlength="6">
+                <span class="pre">Пароль</span>
+            </div>
+
+          
 
             <button>Далее</button>
         </div>
